226 what to do with language files (#235)
* Started work on language files

* Some progress on migrating to new language files

* Add more translations

* progress on language files

* Even more progress

* more progress

* progress and french

* progress

* Added themes